--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2212,6 +2212,33 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
     (("<f7>"   . yankpad-insert)
      ("C-<f7>"   . yankpad-map)))
 #+end_src
+*** Org Roam
+
+#+begin_src emacs-lisp
+
+  ;; (when is-windows  
+  ;;   (add-to-list 'exec-path "C:/ProgramJava/tools/sqlite-tools-win32-x86-3340100"))
+  
+  (use-package org-roam
+    :after org
+    :custom
+    (org-roam-directory (concat org-directory "/slipbox"))
+    :init
+    (setq org-roam-v2-ack t)
+    :bind
+    ("C-c n l" . org-roam-buffer-toggle)
+    ("C-c n f" . org-roam-node-find)
+    (:map org-mode-map
+          (("C-c n i" . org-roam-node-insert)))
+    :config
+    (setq org-roam-capture-templates '(("d" "default" plain "%?"
+                                        :if-new (file+head "%<%Y-%m-%d--%H-%M>--${slug}.org"
+                                                           "#+TITLE: ${title}\n#+DATE: %T\n")
+                                        :unnarrowed t)))
+    ;; this sets up various file handling hooks so your DB remains up to date
+    (org-roam-setup))
+#+end_src
+
 
 ** My functions
 *** Emacs Config File -> =C-z ;=
