--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1985,7 +1985,7 @@ Targets include this file and any file contributing to the agenda - up to 2 leve
 Customize speed-commands :
 - N :: Show next entry keeping other entries closed
 - P :: Show previous entry keeping previous entries closed
-
+- m :: org-mark-subtree
  #+begin_src emacs-lisp
    (defun nc/org-show-next-heading-tidily ()
      "Show next entry, keeping other entries closed."
@@ -2020,6 +2020,7 @@ Customize speed-commands :
 
    (push '("N" nc/org-show-next-heading-tidily) org-speed-commands)
    (push '("P" nc/org-show-previous-heading-tidily) org-speed-commands)
+   (push '("m" org-mark-subtree) org-speed-commands)
 
    (defun nc/org-go-speed ()
      "Goes to the beginning of an element's header, so that you can execute speed commands."
