--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2243,7 +2243,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
 
   ;; (when is-windows  
   ;;   (add-to-list 'exec-path "C:/ProgramJava/tools/sqlite-tools-win32-x86-3340100"))
-  
+
   (use-package org-roam
     :after org
     :custom
@@ -2256,12 +2256,17 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
     (:map org-mode-map
           (("C-c n i" . org-roam-node-insert)))
     :config
+
     (setq org-roam-capture-templates '(("d" "default" plain "%?"
-                                        :if-new (file+head "%<%Y-%m-%d--%H-%M>--${slug}.org"
-                                                           "#+TITLE: ${title}\n#+DATE: %T\n")
-                                        :unnarrowed t)))
+                                        :if-new
+                                        (file+head "%<%Y-%m-%d--%H-%M>--${slug}.org"
+                                                   "#+title: ${title}\n#+date: %u\n\n -links::\n\n")
+                                        :unnarrowed t
+                                        :immediate-finish t))
+          )
     ;; this sets up various file handling hooks so your DB remains up to date
     (org-roam-setup))
+ 
 #+end_src
 
 
