--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1215,13 +1215,45 @@ Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
     (("C-z e" . aweshell-dedicated-toggle))
     )
 #+end_src
+*** LSP Mode
+
+#+begin_src emacs-lisp
+  (use-package lsp-mode
+    :commands lsp
+    :config
+    (setq ; recommended
+          gc-cons-threshold (* 100 1024 1024)
+          read-process-output-max (* 1024 1024))
+
+    (setq ; optional
+          ;; lsp-clojure-custom-server-command '("/Users/nchapon/_PIM/tmp/2del/clojure-lsp") 
+
+          ; Features
+          lsp-lens-enable t
+          lsp-semantic-tokens-enable t
+
+          ;; Conflicts with other Clojure emacs packages
+          cljr-add-ns-to-blank-clj-files nil ; disable clj-refactor adding ns to blank files
+          cider-eldoc-display-for-symbol-at-point nil ; disable cider eldoc integration
+          ; lsp-eldoc-enable-hover nil ; disable lsp-mode showing eldoc during symbol at point
+          ; lsp-enable-indentation nil ; uncomment to use cider indentation instead of lsp
+          ; lsp-enable-completion-at-point nil ; uncomment to use cider completion instead of lsp
+          ))
+
+  ;; optionally
+  (use-package lsp-ui :commands lsp-ui-mode)
+
+#+end_src
 
 ** Programming
 *** Clojure
 **** clojure-mode
 #+begin_src emacs-lisp
   (use-package clojure-mode
-    :mode "\\.clj$"
+    :hook
+    ((clojure-mode . lsp)
+     (clojurec-mode . lsp)
+     (clojurescript-mode . lsp))
     :init
     (setq clojure-align-forms-automatically t))
 #+end_src
