--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -434,10 +434,13 @@ This happens a lot on OS X, where an Emacs instance started from the GUI inherit
     ;; Detect external file changes and auto refresh file
     (auto-revert-use-notify nil)
     (auto-revert-interval 3) ; Auto revert every 3 sec
+
+
     :config
     ;; Enable global auto-revert
     (global-auto-revert-mode t)
 
+    (put 'dired-find-alternate-file 'disabled nil)
     ;; Using GNU ls on macOS instead of ls
     (if (executable-find "gls")
         (progn
@@ -460,9 +463,11 @@ general, after calling the respective narrowing function you type a
 filter string into the minibuffer.
 
 #+begin_src emacs-lisp
-(use-package dired-narrow
-  :bind (:map dired-mode-map
-              ("/" . dired-narrow)))
+  (use-package dired-narrow
+    :commands dired-narrow
+    :after dired
+    :bind (:map dired-mode-map
+                ("/" . dired-narrow)))
 #+end_src
 
 **** Font Lock Dired
