--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2314,6 +2314,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
     :bind
     ("C-c n l" . org-roam-buffer-toggle)
     ("C-c n f" . org-roam-node-find)
+    ("C-c n r" . org-roam-node-random)
     (:map org-mode-map
           (("C-c n i" . org-roam-node-insert)))
     :config
@@ -2321,13 +2322,13 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
     (setq org-roam-capture-templates '(("d" "default" plain "%?"
                                         :if-new
                                         (file+head "%<%Y-%m-%d--%H-%M>--${slug}.org"
-                                                   "#+title: ${title}\n#+date: %u\n\n -links::\n\n")
+                                                   "#+title: ${title}\n#+date: %u\n\n")
                                         :unnarrowed t
                                         :immediate-finish t))
           )
     ;; this sets up various file handling hooks so your DB remains up to date
     (org-roam-setup))
- 
+
 #+end_src
 
 
