--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1788,7 +1788,7 @@ will appear as projects.
    (defun org-journal-find-bookmark ()
      ;; Open today's journal, but specify a non-nil prefix argument in order to
      ;; inhibit inserting the heading; org-capture will insert the heading.
-     (nc/journal-file-today)
+     (nc/goto-journal-file)
      ;; Position point on the journal's top-level heading so that org-capture
      ;; will add the new entry as a child entry.
 
@@ -1847,7 +1847,7 @@ I have my own template for creating new projects
    (defun org-journal-find-location ()
     ;; Open today's journal, but specify a non-nil prefix argument in order to
     ;; inhibit inserting the heading; org-capture will insert the heading.
-    (nc/journal-file-today)
+    (nc/goto-journal-file)
     ;; Position point on the journal's top-level heading so that org-capture
     ;; will add the new entry as a child entry.
 
